<resources>
    <string name="app_name">Chat com Firebase</string>
    <string name="dica_login">Digite seu login</string>
    <string name="dica_senha">Digite sua senha</string>
    <string name="quero_me_cadastrar">Quero me cadastrar</string>
    <string name="data_nome">Em %s, %s diz:</string>
    <string name="digite_sua_mensagem">Digite a sua mensagem</string>
    <string name="no_gps_no_app">No will possible send location</string>
    <string name="cadatro_funcionou">Usuário cadastrado com sucesso!</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="select_chat">Selecione o tema da sala</string>
    <string name="cinema_chat">Cinema</string>
    <string name="novidades_chat">Novidades</string>
    <string name="tecnologia_chat">Tecnologia</string>
    <string name="economia_chat">Economia</string>



    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
